--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ configurations {
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
@@ -26,7 +27,8 @@ dependencies {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
 
-    implementation 'com.discord4j:discord4j-core:3.1.0'
+    implementation 'org.javacord:javacord:3.0.6'
+    compile 'com.github.twitch4j:twitch4j:1.1.0'
 }
 
 test {
